--- a/sso-permission-ui/src/test/xSystem.html
+++ b/sso-permission-ui/src/test/xSystem.html
@@ -46,19 +46,19 @@
                     <div class="menu_section">
                         <h3>&nbsp;</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-users"></i> 用户管理 </a></li>
+                            <li><a href="user.html"><i class="fa fa-users"></i> 用户管理 </a></li>
                         </ul>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-sitemap"></i> 组织管理 </a></li>
+                            <li><a href="organization.html"><i class="fa fa-sitemap"></i> 组织管理 </a></li>
                         </ul>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-paw"></i> 角色管理 </a></li>
+                            <li><a href="role.html"><i class="fa fa-paw"></i> 角色管理 </a></li>
                         </ul>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-gift"></i> 资源管理 </a></li>
+                            <li><a href="resource.html"><i class="fa fa-gift"></i> 资源管理 </a></li>
                         </ul>
                         <ul class="nav side-menu">
-                            <li><a href="system.html"><i class="fa fa-joomla"></i> 系统管理 </a></li>
+                            <li><a href="xSystem.html"><i class="fa fa-joomla"></i> 系统管理 </a></li>
                         </ul>
 
                     </div>
